Add blended only note

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="Syllabus: Fall 2020" />
+<meta name="author" content="Syllabus for Blended Sections: Fall 2020" />
 
 
 <title>STAT 216: Introduction to Statistics</title>
@@ -1523,12 +1523,16 @@ div.tocify {
 
 
 <h1 class="title toc-ignore">STAT 216: Introduction to Statistics</h1>
-<h4 class="author">Syllabus: Fall 2020</h4>
-<h4 class="date">Last updated: 2020-08-01</h4>
+<h4 class="author">Syllabus for Blended Sections: Fall 2020</h4>
+<h4 class="date">Last updated: 2020-08-03</h4>
 
 </div>
 
 
+<hr />
+<blockquote>
+<p><strong><em>NOTE</em></strong>: This syllabus is only for blended sections of STAT 216. For online sections of STAT 216, refer to the [online section syllabus].</p>
+</blockquote>
 <hr />
 <div id="instructor-contact-information" class="section level1 tabset tabset-fade">
 <h1 class="tabset tabset-fade">Instructor contact information</h1>
@@ -1562,9 +1566,8 @@ Phone: (406) 993-5350</p>
 <div id="course-calendars" class="section level1">
 <h1>Course calendars</h1>
 <ul>
-<li>STAT 216 calendar for students in Mon/Wed/Fri sections</li>
-<li>STAT 216 calendar for students in Tue/Thur sections</li>
-<li>STAT 216 calendar for students in online sections</li>
+<li>STAT 216 calendar for students in blended Mon/Wed/Fri sections</li>
+<li>STAT 216 calendar for students in blended Tue/Thur sections</li>
 <li><a href="http://catalog.montana.edu/academiccalendar/">MSU academic calendar</a></li>
 </ul>
 <hr />
