--- a/index.html
+++ b/index.html
@@ -1531,7 +1531,7 @@ div.tocify {
 
 <hr />
 <blockquote>
-<p><strong><em>NOTE</em></strong>: This syllabus is only for blended sections of STAT 216. For online sections of STAT 216, refer to the [online section syllabus].</p>
+<p><strong><em>NOTE</em></strong>: This syllabus is only for blended sections of STAT 216. For online sections of STAT 216, refer to the <a href="http://www.math.montana.edu/courses/s216/syllabus.html">online section syllabus</a>.</p>
 </blockquote>
 <hr />
 <div id="instructor-contact-information" class="section level1 tabset tabset-fade">
