Add links to our websites

--- a/index.html
+++ b/index.html
@@ -1540,7 +1540,7 @@ div.tocify {
 <p>Refer to your section’s <em>D2L Announcements</em> page for your instructor and co-instructor/TA contact information.</p>
 <div id="student-success-coordinator" class="section level2">
 <h2>Student Success Coordinator</h2>
-<p><strong>Jade Schmidt</strong><br />
+<p><a href="http://www.math.montana.edu/directory/faculty/1524571/jade-schmidt" target="_blank"><strong>Jade Schmidt</strong></a><br />
 email: <a href="mailto:jade.schmidt2@montana.edu" class="email">jade.schmidt2@montana.edu</a><br />
 Office: Wilson 2-263<br />
 Phone: (406) 994-6557</p>
@@ -1548,7 +1548,7 @@ Phone: (406) 994-6557</p>
 </div>
 <div id="assistant-coordinator" class="section level2">
 <h2>Assistant Coordinator</h2>
-<p><strong>Melinda Yager</strong><br />
+<p><a href="http://www.math.montana.edu/directory/faculty/1582830/melinda-yager" target="_blank"><strong>Melinda Yager</strong></a><br />
 email: <a href="mailto:melinda.yager@montana.edu" class="email">melinda.yager@montana.edu</a><br />
 Office: Wilson 1-145<br />
 Phone: (406) 994-6876</p>
@@ -1556,7 +1556,7 @@ Phone: (406) 994-6876</p>
 </div>
 <div id="course-supervisor" class="section level2">
 <h2>Course Supervisor</h2>
-<p><strong>Dr. Stacey Hancock</strong><br />
+<p><a href="http://www.math.montana.edu/shancock/" target="_blank"><strong>Dr. Stacey Hancock</strong></a><br />
 email: <a href="mailto:stacey.hancock@montana.edu" class="email">stacey.hancock@montana.edu</a><br />
 Office: Wilson 2-195<br />
 Phone: (406) 993-5350</p>
