--- a/index.html
+++ b/index.html
@@ -1635,7 +1635,7 @@ Phone: (406) 993-5350</p>
 <li>Install the <code>catstats</code> package.</li>
 </ul>
 <ol start="2" style="list-style-type: decimal">
-<li><p>Use RStudio through the RStudio Cloud. This resource allows you to use RStudio through a web browser. It is free for use, but it does limit you to a certain number of project hours per month.</p></li>
+<li><p>Use RStudio through the <a href="https://login.rstudio.cloud/register?redirect=https%3A%2F%2Fclient.login.rstudio.cloud%2Foauth%2Flogin%3Fshow_auth%3D0%26show_login%3D1%26show_setup%3D1">RStudio Cloud</a>. This resource allows you to use RStudio through a web browser. It is free for use, but it does limit you to a certain number of project hours per month.</p></li>
 <li><p>Use RStudio through an MSU <a href="https://studentlabs.montana.edu/remotelabs/howto.html">virtual machine</a>.</p></li>
 <li><p>Use RStudio in an MSU on-campus computer lab.</p></li>
 </ol>
