Added the expectation that reading/videos are due prior to class each week.

--- a/index.html
+++ b/index.html
@@ -1650,7 +1650,7 @@ Phone: (406) 993-5350</p>
 <p>Most sections of Stat 216 will be using a blended classroom format. Each week, students will:</p>
 <ul>
 <li>meet with your fellow student cohort in your assigned classroom one class period per week for <strong>in-class group activities and discussion</strong>,</li>
-<li><strong>read</strong> assigned sections of the online textbook and <strong>watch videos</strong> on that week’s content,</li>
+<li><strong>read</strong> assigned sections of the online textbook and <strong>watch videos</strong> on that week’s content <strong><em>prior</em></strong> to attending your assigned in-person class day,</li>
 <li>read that week’s <strong>case study</strong> and answer <strong>discussion questions</strong> on the case study via <a href="https://ecat1.montana.edu/">D2L</a>,</li>
 <li>complete one <strong>assignment</strong> in <a href="https://www.gradescope.com/saml">Gradescope</a>.</li>
 </ul>
