--- a/index.html
+++ b/index.html
@@ -1565,8 +1565,14 @@ Phone: (406) 993-5350</p>
 <div id="course-calendars" class="section level1">
 <h1>Course calendars</h1>
 <ul>
-<li>STAT 216 calendar for students in blended Mon/Wed/Fri sections</li>
-<li>STAT 216 calendar for students in blended Tue/Thur sections</li>
+<li>STAT 216 calendar for students in…
+<ul>
+<li><a href="https://math.montana.edu/courses/s216/Stat216_Calendar-Monday.pdf">Monday cohorts</a></li>
+<li><a href="https://math.montana.edu/courses/s216/Stat216_Calendar-Tuesday.pdf">Tuesday cohorts</a></li>
+<li><a href="https://math.montana.edu/courses/s216/Stat216_Calendar-Wednesday.pdf">Wednesday cohorts</a></li>
+<li><a href="https://math.montana.edu/courses/s216/Stat216_Calendar-Thursday.pdf">Thursday cohorts</a></li>
+<li><a href="https://math.montana.edu/courses/s216/Stat216_Calendar-Friday.pdf">Friday cohorts</a></li>
+</ul></li>
 <li><a href="http://catalog.montana.edu/academiccalendar/">MSU academic calendar</a></li>
 </ul>
 <hr />
