--- a/index.html
+++ b/index.html
@@ -1626,13 +1626,21 @@ Phone: (406) 993-5350</p>
 <h1>Course materials and resources</h1>
 <div id="online-textbook-and-coursepack" class="section level3">
 <h3>Online textbook and coursepack</h3>
-<p>The free, online textbook for this course can be found at <a href="https://mtstateintrostats.github.io/IntroStatTextbook/">https://mtstateintrostats.github.io/IntroStatTextbook/</a> (also linked in D2L).</p>
-<p>A coursepack of in-class activities is available for purchase in the MSU Bookstore. This coursepack is required, and students are expected to bring the coursepack to class each day.</p>
+<p>Two “textbooks” are required for this course:</p>
+<ol style="list-style-type: decimal">
+<li><a href="https://mtstateintrostats.github.io/IntroStatTextbook/"><em>Montana State Introductory Statistics with R</em></a> — our free, online textbook</li>
+<li><em>STAT 216 Coursepack</em> — workbook with reading guides and in-class activities</li>
+</ol>
+<p>The <em>Stat 216 Coursepack</em> of in-class activities is available for purchase in the <a href="https://www.msubookstore.org/">MSU Bookstore</a>. Students are expected to bring the coursepack to class each day.</p>
+<p>The coursepack is currently be printed and will be available for purchase through the <a href="https://www.msubookstore.org/">MSU Bookstore</a> starting <strong>Monday, January 11</strong>. You may purchase the coursepack in person, or you may purchase online and have the coursepack shipped to you. Chapter 1 of the coursepack is provided here if you do not have the coursepack by your first day of class.</p>
+<ul>
+<li><a href="Coursepack-Ch1.pdf"><em>STAT 216 Coursepack: Chapter 1</em></a></li>
+</ul>
 </div>
 <div id="rstudio" class="section level3">
 <h3>RStudio</h3>
 <p>We will be using the statistical software <a href="https://www.r-project.org/">R</a> through the IDE <a href="https://rstudio.com/products/rstudio/">RStudio</a> for data visualization and statistical analyses.</p>
-<p>You will access this software through the MSU RStudio server: <a href="https://rstudio.math.montana.edu/">https://rstudio.math.montana.edu/</a>. Your username is your NetID, and your password is the password associated with your NetID.</p>
+<p>You will access this software through the MSU RStudio server: <a href="https://rstudio.math.montana.edu/">rstudio.math.montana.edu</a>. Your username is your NetID, and your password is the password associated with your NetID.</p>
 </div>
 <div id="learning-management-tools" class="section level3">
 <h3>Learning management tools</h3>
@@ -1788,6 +1796,14 @@ Phone: (406) 993-5350</p>
 <p>Plagiarism is an act of academic misconduct, which carries with it consequences including, but not limited to, receiving a course grade of “F” and a report to the Office of the Dean of Students. Unfortunately, it is not always clear if the misuse of sources is intentional or unintentional, which means that you may be accused of plagiarism even if you do not intentionally plagiarize. If you have any questions regarding use and citation of sources in your academic writing, you are responsible for consulting with your instructor before the assignment due date. In addition, you can work with an MSU Writing Center tutor at any point in your writing process, including when you are integrating or citing sources. You can make an appointment and find citation resources at www.montana.edu/writingcenter.</p>
 <p><strong>In STAT 216, students involved in plagiarism on assignments (all parties involved) will receive a zero grade on that assignment. The second offense will result in a zero on that assignment, and the incident will be reported to the Dean of Students. Academic misconduct on an exam will result in a zero on that exam and will be reported to the Dean of Students, without exception.</strong></p>
 <p><a href="https://www.montana.edu/deanofstudents/syllabus.html">More information about Academic Misconduct from the Dean of Students</a></p>
+<!-- Online sections: -->
+<!-- - Activities and video quizzes due Fridays at 11pm; Case studies Sundays; Homework Wednesdays -->
+<!-- Regular sections - video quizzes due prior to attending class -->
+<!-- Instructors: 3 office hours; 1 R help session per week -->
+<!-- - Exams: Give them a time-frame; choose an hour to log into the proctor - in Gradescope; 75 min one day 6am-11pm -->
+<!-- - Notes on what to do with internet issues within time period -->
+<!-- - Add to syllabus: -->
+<!-- * activities due same day of class - can email instructor by 11pm -->
 </div>
 
 
