--- a/index.html
+++ b/index.html
@@ -1632,9 +1632,10 @@ Phone: (406) 993-5350</p>
 <li><em>STAT 216 Coursepack</em> — workbook with reading guides and in-class activities</li>
 </ol>
 <p>The <em>Stat 216 Coursepack</em> of in-class activities is available for purchase in the <a href="https://www.msubookstore.org/">MSU Bookstore</a>. Students are expected to bring the coursepack to class each day.</p>
-<p>The coursepack is currently be printed and will be available for purchase through the <a href="https://www.msubookstore.org/">MSU Bookstore</a> starting <strong>Monday, January 11</strong>. You may purchase the coursepack in person, or you may purchase online and have the coursepack shipped to you. Chapter 1 of the coursepack is provided here if you do not have the coursepack by your first day of class.</p>
+<p>The coursepack is currently being printed and will be available for purchase through the <a href="https://www.msubookstore.org/">MSU Bookstore</a> starting <strong>Monday, January 11</strong>. You may purchase the coursepack in person, or you may purchase online and have the coursepack shipped to you. Chapter 1 of the coursepack is provided here if you do not have the coursepack by your first day of class.</p>
 <ul>
-<li><a href="Coursepack-Ch1.pdf"><em>STAT 216 Coursepack: Chapter 1</em></a></li>
+<li><a href="Coursepack-Preface.pdf"><em>STAT 216 Coursepack</em>: Preface</a></li>
+<li><a href="Coursepack-Ch1.pdf"><em>STAT 216 Coursepack</em>: Chapter 1</a></li>
 </ul>
 </div>
 <div id="rstudio" class="section level3">
