--- a/index.html
+++ b/index.html
@@ -1572,10 +1572,10 @@ Phone: (406) 993-5350</p>
 <ul>
 <li>STAT 216 calendar for students in…
 <ul>
-<li>Monday cohorts</li>
-<li>Wednesday cohorts</li>
-<li>Friday cohorts</li>
-<li>Online sections</li>
+<li><a href="calendars/S21-Stat216_Calendar-Monday.pdf">Monday cohorts</a></li>
+<li><a href="calendars/S21-Stat216_Calendar-Wednesday.pdf">Wednesday cohorts</a></li>
+<li><a href="calendars/S21-Stat216_Calendar-Friday.pdf">Friday cohorts</a></li>
+<li><a href="calendars/S21-Stat216_Calendar-Online.pdf">Online sections</a></li>
 </ul></li>
 <li><a href="http://catalog.montana.edu/academiccalendar/">MSU academic calendar</a></li>
 </ul>
