--- a/index.html
+++ b/index.html
@@ -1351,6 +1351,14 @@ h6 {
 </style>
 
 
+<style type="text/css">.tocify-subheader > .tocify-item {
+text-indent: initial;
+padding-left: 2em;
+}
+.tocify-header > .tocify-item {
+text-indent: initial;
+padding-left: 1em;
+}</style>
 
 
 
