Update project instructions

--- a/index.html
+++ b/index.html
@@ -1740,20 +1740,8 @@ Phone: (406) 993-5350</p>
 </div>
 <div id="group-project-20" class="section level3">
 <h3>Group project (20%)</h3>
-<p>Throughout the semester you will complete a group project. The project will involve a complete data analysis on a research question of your choice based on a study you design and data you collect from the virtual human population of <a href="https://islands.smp.uq.edu.au/login.php">The Islands</a>. Project components include:</p>
-<ul>
-<li>Project proposal</li>
-<li>Data collection</li>
-<li>Written report including the following sections:
-<ul>
-<li>Background</li>
-<li>Methods</li>
-<li>Results</li>
-<li>Discussion and conclusions</li>
-<li>Appendix</li>
-</ul></li>
-<li>Recorded 6–8-minute video presentation</li>
-</ul>
+<p>Throughout the semester you will complete a group project. The project will involve a complete data analysis on a research question of your choice based on a study you design and data you collect from the virtual human population of <a href="https://islands.smp.uq.edu.au/login.php">The Islands</a>.</p>
+<p>Detailed project instructions can be found at: <a href="http://bit.ly/stat216-project-s21">http://bit.ly/stat216-project-s21</a></p>
 <p>This project is in lieu of a final exam. Video presentations will be posted in D2L and viewed by your fellow students and instructors during finals week.</p>
 </div>
 <div id="letter-grades" class="section level3">
