Add link to statistical computing section in textbook

--- a/index.html
+++ b/index.html
@@ -1650,7 +1650,7 @@ Phone: (406) 993-5350</p>
 <h3>RStudio</h3>
 <p>We will be using the statistical software <a href="https://www.r-project.org/">R</a> through the IDE <a href="https://rstudio.com/products/rstudio/">RStudio</a> for data visualization and statistical analyses.</p>
 <p>You will access this software through the MSU RStudio server: <a href="https://rstudio.math.montana.edu/">rstudio.math.montana.edu</a>. Your username is your 7-character NetID (in the form x##x###, where x is a letter and # is a number), and your password is the password associated with your NetID. Your email address will not work to log in to the RStudio server.</p>
-<p>See the Welcome or Preliminaries chapter in our textbook for more information on accessing RStudio.</p>
+<p>See the <a href="https://mtstateintrostats.github.io/IntroStatTextbook/#stat-computing">Statistical Computing</a> section in the Welcome chapter of our textbook for alternative options for accessing RStudio.</p>
 </div>
 <div id="learning-management-tools" class="section level3">
 <h3>Learning management tools</h3>
