--- a/index.html
+++ b/index.html
@@ -1690,7 +1690,7 @@ Phone: (406) 993-5350</p>
 <h3>Case study and discussion (5%)</h3>
 <p>Each week, you will read a case study and answer reading questions on that case study, then post answers to discussion questions in the D2L Discussion Forum. You are expected to contribute <strong>2 discussion posts per week — one original post and one reply to a classmate.</strong></p>
 <ul>
-<li><em>All sections:</em> Discussion posts on case studies will be due in D2L each <strong>Sunday by 11pm MST.</strong></li>
+<li><em>All sections:</em> Discussion posts on case studies will be due in D2L each <strong>Sunday by 11pm Mountain Time.</strong></li>
 <li>The lowest two case study discussion posts will be dropped.</li>
 </ul>
 </div>
@@ -1699,7 +1699,7 @@ Phone: (406) 993-5350</p>
 <p>You will be expected to complete the assigned textbook reading and D2L videos using the reading guides provided in the coursepack prior to attending the in-class activity for each week. Concept check quiz questions will be embedded in the videos up through the due date. Up until the deadline, you can retake the video quizzes as many times as you like (the most recent grade will be recorded in D2L). (Note that if you re-watch a video without taking the quiz, D2L will record a zero for that quiz, even if you took the quiz previously.) After the due date, videos will still be available to review, but quiz questions will no longer be included in the video.</p>
 <ul>
 <li><em>Blended sections:</em> Video quizzes are due by the <strong>start of your in-class period for the week</strong>.</li>
-<li><em>Online sections:</em> Video quizzes are due each <strong>Friday by 11pm MST</strong>.</li>
+<li><em>Online sections:</em> Video quizzes are due each <strong>Friday by 11pm Mountain Time</strong>.</li>
 <li>No video grades will be dropped.</li>
 </ul>
 </div>
@@ -1710,14 +1710,14 @@ Phone: (406) 993-5350</p>
 <ul>
 <li>Activities must be completed on the activity worksheet. If you prefer to complete the activity on a pdf copy using a stylus-enabled device, please speak to your instructor, and he or she will provide you with the appropriate materials.</li>
 <li>Activities will be checked for completion, both the in-class portion and the out-of-class portion of the activity, at the <strong>beginning of the following class period</strong>.</li>
-<li>If you have an excused absence the day the activity is due (e.g., quarantine or ill), you may email your instructor a scanned copy of the completed activity for credit. This must be received by <strong>11pm MST on class day</strong>.</li>
+<li>If you have an excused absence the day the activity is due (e.g., quarantine or ill), you may email your instructor a scanned copy of the completed activity for credit. This must be received by <strong>11pm Mountain Time on class day</strong>.</li>
 <li>The lowest activity grade will be dropped.</li>
 </ul>
 <p><em>Online sections:</em></p>
 <p>Each week, you will work through that week’s coursepack group activity while watching a guided activity video on D2L. Completion of the activity counts towards this portion of your grade.</p>
 <ul>
 <li>Activities must be completed on the activity worksheet. If you prefer to complete the activity on a pdf copy using a stylus-enabled device, please speak to your instructor, and he or she will provide you with the appropriate materials.</li>
-<li>Completed activities, including both the “in-class” and “out-of-class” portions, are due in Gradescope each <strong>Friday by 11pm MST</strong>.</li>
+<li>Completed activities, including both the “in-class” and “out-of-class” portions, are due in Gradescope each <strong>Friday by 11pm Mountain Time</strong>.</li>
 <li>The lowest activity grade will be dropped.</li>
 </ul>
 </div>
@@ -1725,19 +1725,35 @@ Phone: (406) 993-5350</p>
 <h3>Assignments (30%)</h3>
 <p>You will complete weekly assignments in <a href="https://www.gradescope.com/">Gradescope</a>.</p>
 <ul>
-<li><em>Blended sections:</em> Weekly assignments will be due <strong>by 11pm MST 5 days after the in-class activity</strong> on the same content. (E.g. If you attend class on Mondays, your assignments will be due each Saturday at 11pm MST.)<br />
+<li><em>Blended sections:</em> Weekly assignments will be due <strong>by 11pm Mountain Time 5 days after the in-class activity</strong> on the same content. (E.g. If you attend class on Mondays, your assignments will be due each Saturday at 11pm Mountain Time.)<br />
 </li>
-<li><em>Online sections:</em> Weekly assignments will be due each <strong>Wednesday by 11pm MST</strong>, starting in the second week of classes.</li>
+<li><em>Online sections:</em> Weekly assignments will be due each <strong>Wednesday by 11pm Mountain Time</strong>, starting in the second week of classes.</li>
 <li>The lowest assignment grade will be dropped.</li>
 </ul>
 </div>
 <div id="midterm-exams-30" class="section level3">
 <h3>Midterm exams (30%)</h3>
-<p>There will be two in-class midterm exams (worth 15% each). Details and instructions for each exam will be posted the week prior to the exam in D2L.</p>
-<p><em>Blended sections</em>:</p>
-<p>Midterm exam 1 will be during the week of <strong>February 22–26</strong>; Midterm exam 2 during <strong>April 12–16</strong>. Potential midterm exam questions will be released the week prior to the exam, and you will be given a randomly chosen subset of these questions for your exam, taken in-class during your cohort’s scheduled in-class time.</p>
-<p><em>Online sections</em>:</p>
-<p>Midterm exam 1 will be on <strong>Friday, February 26</strong>; Midterm exam 2 will be on <strong>Friday, April 16</strong>. The exam will be taken in <a href="https://www.gradescope.com/">Gradescope</a>. The exam window will be open 6am–11pm on exam day, and you will have 75 minutes from the time you start the exam or until 11pm (whichever comes first) to complete the exam.</p>
+<p>There will be two midterm exams (worth 15% of the course grade each). Each exam has an in-class (blended sections) or timed online (online sections) exam, which comprises 90% of the exam grade. The other 10% of the exam grade is a set of questions based on a case study submitted through Gradescope. The case study portion of the exam is due in Gradescope by 11pm Mountain Time on the first Sunday following the exam.</p>
+<p>A practice exam will be released in D2L two weeks prior to the exam, with solutions to the practice exam released in D2L one week prior to the exam. Further details, resources, and instructions for each exam will be posted the week prior to the exam in D2L.</p>
+<div id="exam-format-for-blended-sections" class="section level4">
+<h4><em>Exam format for blended sections</em>:</h4>
+<p>Midterm exams will be taken in class during your cohort’s scheduled in-class time. Midterm exam 1 will be during the week of <strong>February 22–26</strong>; Midterm exam 2 during <strong>April 12–16</strong>.</p>
+<ul>
+<li>Potential midterm exam questions will be released one week prior to the exam. All exam questions will be selected from this set.</li>
+<li>On your exam day, you will be given a randomly chosen subset of the previously released potential midterm exam questions for your exam.</li>
+<li>Midterm exams are closed book, closed notes. A formula sheet will be provided to use during the exam (also released with the potential midterm exam questions).</li>
+</ul>
+</div>
+<div id="exam-format-for-online-sections" class="section level4">
+<h4><em>Exam format for online sections</em>:</h4>
+<p>Midterm exams will be taken online on the Friday of exam week. Midterm exam 1 will be on <strong>Friday, February 26</strong>; Midterm exam 2 will be on <strong>Friday, April 16</strong>.</p>
+<ul>
+<li>The exam will be taken in <a href="https://www.gradescope.com/">Gradescope</a>.</li>
+<li>The exam window will be open 6am–11pm Mountain Time on exam day, and you will have 75 minutes from the time you start the exam or until 11pm Mountain Time (whichever comes first) to complete the exam.</li>
+<li>Potential midterm exam questions will <strong>not</strong> be released in advance (as in the blended sections).</li>
+<li>Midterm exams are open book, open notes, and open resources that might typically be used in a research setting. Websites that provide tutoring or answers, such as Chegg, are not allowed; we will acquire a list of all students that accessed Chegg and other similar sites during the exam window, and those students will receive a zero on the exam and the incident will be reported to the Dean of Students.</li>
+</ul>
+</div>
 </div>
 <div id="group-project-20" class="section level3">
 <h3>Group project (20%)</h3>
@@ -1808,7 +1824,7 @@ Phone: (406) 993-5350</p>
 <ul>
 <li><p><strong>Case study discussion posts and assignments</strong> (<em>all sections</em>): Case study discussion posts (D2L) and assignments (Gradescope) are typically available at least five days prior to the due date. Thus, extensions on these posts and assignments are not given unless for extenuating circumstances that prevent the student from working on the post/assignment for that entire period.</p></li>
 <li><p><strong>Videos</strong> (<em>all sections</em>): You may take the in-video quizzes as many times as you like up until the due date — the most recent quiz score will be the recorded grade for that video in D2L. Videos are available in D2L at least one week prior to the due date, so extensions on these quizzes are not given unless for extenuating circumstances that prevent the student from viewing the video for that entire period.</p></li>
-<li><p><strong>Activities</strong> (<em>blended sections</em>): Attendance in the blended sections is required, and the in-class activity score is a proxy for attendance and engagement. Students are expected to be in class during in-class activities to provide support to each other and their teammates while working through the material. If you need to miss a class period due to illness, quarantine, or other extenuating circumstances, please email your instructor a picture or scan of your completed activity due that day by 11pm, and we can give you credit for your completed activity. If the activity is not received by 11pm on the day it is due, you will not receive credit unless for extenuating circumstances that prevented you from completing the activity for the entire week prior to the due date.</p></li>
+<li><p><strong>Activities</strong> (<em>blended sections</em>): Attendance in the blended sections is required, and the in-class activity score is a proxy for attendance and engagement. Students are expected to be in class during in-class activities to provide support to each other and their teammates while working through the material. If you need to miss a class period due to illness, quarantine, or other extenuating circumstances, please email your instructor a picture or scan of your completed activity due that day by 11pm Mountain Time, and we can give you credit for your completed activity. If the activity is not received by 11pm Mountain Time on the day it is due, you will not receive credit unless for extenuating circumstances that prevented you from completing the activity for the entire week prior to the due date.</p></li>
 <li><p><strong>Activities</strong> (<em>online sections</em>): Guiding videos for the activities are available in D2L at least five days prior to the due date. Thus, extensions on activities are not given unless for extenuating circumstances that prevent the student from working on the activity for that entire period.</p></li>
 <li><p><strong>Exams</strong> (<em>blended sections</em>):</p>
 <ul>
