--- a/index.html
+++ b/index.html
@@ -442,6 +442,7 @@ Phone: (406) 994-6875</p>
 <h4><em>Individual portion</em>:</h4>
 <p>Individual midterm exam 1 will be <strong>September 29th</strong>; Individual midterm exam 2 will be <strong>November 3rd</strong>.</p>
 <ul>
+<li>Individual portions of the midterms will be worth 80% of your midterm exam grade.</li>
 <li>Potential individual midterm exam questions will be released one week prior to the exam. All exam questions will be selected from this set.</li>
 <li>On the exam day, you will be given a randomly chosen subset of the previously released potential exam questions for your exam.</li>
 <li>Individual midterm exams are closed book, closed notes.</li>
@@ -454,6 +455,7 @@ Phone: (406) 994-6875</p>
 <h4><em>Group portion</em>:</h4>
 <p>Group midterm exam 1 will be <strong>October 1st</strong>; Group midterm exam 2 will be <strong>November 5th</strong>.</p>
 <ul>
+<li>Group portions of the midterms are worth 20% of your midterm exam grade.</li>
 <li>Group midterm exams are open book, open notes.</li>
 <li>You will be allowed a calculator on the group midterm exams.</li>
 <li>You <strong>will</strong> be required to use Rstudio on the group midterm exams.</li>
@@ -467,6 +469,7 @@ Phone: (406) 994-6875</p>
 <h4><em>Individual portion</em>:</h4>
 <p>Individual final exam will be <strong>December 10th</strong></p>
 <ul>
+<li>the individual portion of the final exam will be worth 80% of your exam grade.</li>
 <li>Potential final exam questions will be released one week prior to the exam. All exam questions will be selected from this set.</li>
 <li>On the exam day, you will be given a randomly chosen subset of the previously released potential exam questions for your exam.</li>
 <li>The individual final exam is closed book, closed notes.</li>
@@ -479,6 +482,7 @@ Phone: (406) 994-6875</p>
 <h4><em>Group portion</em>:</h4>
 <p>Group final exam will be <strong>December 13th</strong>.</p>
 <ul>
+<li>The group portion of the final exam will be worth 20% of your exam grade.</li>
 <li>The group final exams is open book, open notes.</li>
 <li>You will be allowed a calculator on the group final exam.</li>
 <li>You <strong>will</strong> be required to use Rstudio on the group final exam.</li>
