--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="Spring 2021 Syllabus" />
+<meta name="author" content="Fall 2021 Syllabus" />
 
 
 <title>STAT 216: Introduction to Statistics</title>
@@ -242,7 +242,7 @@ div.tocify {
 
 
 <h1 class="title toc-ignore">STAT 216: Introduction to Statistics</h1>
-<h4 class="author">Spring 2021 Syllabus</h4>
+<h4 class="author">Fall 2021 Syllabus</h4>
 
 </div>
 
