--- a/index.html
+++ b/index.html
@@ -443,20 +443,20 @@ Phone: (406) 994-6875</p>
 <p>The final exam will be taken in class during your normal in-class time and will be <strong>cumulative</strong>. A practice exam will be released in D2L two weeks prior to the exam, with solutions to the practice exam released in D2L one week prior to the exam. Further details, resources, and instructions for each exam will be posted the week prior to the exam in D2L.</p>
 <div id="individual-portion-1" class="section level4">
 <h4><em>Individual portion</em>:</h4>
-<p>Individual final exam will be <strong>December 10th</strong></p>
+<p>Individual final exam will be <strong>December 16th, 6 - 7:50pm</strong></p>
 <ul>
-<li>the individual portion of the final exam will be worth 80% of your exam grade.</li>
+<li>The individual portion of the final exam will be worth 80% of your exam grade.</li>
 <li>Potential final exam questions will be released one week prior to the exam. All exam questions will be selected from this set.</li>
 <li>On the exam day, you will be given a randomly chosen subset of the previously released potential exam questions for your exam.</li>
 <li>The individual final exam is closed book, closed notes.</li>
-<li>A formula sheet will be provided to use during the exam (also released with the potential midterm exam questions).</li>
+<li>A formula sheet will be provided to use during the exam (also released with the potential final exam questions).</li>
 <li>You will be allowed a calculator on the individual final exam.</li>
 <li>You will <strong>not</strong> be required to use Rstudio on the individual final exams.</li>
 </ul>
 </div>
 <div id="group-portion-1" class="section level4">
 <h4><em>Group portion</em>:</h4>
-<p>Group final exam will be <strong>December 13th</strong>.</p>
+<p>Group final exam will be <strong>December 10th (during normal class time)</strong>.</p>
 <ul>
 <li>The group portion of the final exam will be worth 20% of your exam grade.</li>
 <li>The group final exams is open book, open notes.</li>
