remove old week 1 and preface; add new preface and link to week 1

--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@ Phone: (406) 994-6875</p>
 <p>The <em>Stat 216 Coursepack</em> of in-class activities is available for purchase in the <a href="https://www.msubookstore.org/">MSU Bookstore</a>. You may purchase the coursepack in person, or you may purchase online and have the coursepack shipped to you. Students are expected to bring the coursepack to class each day and to complete the activities within the coursepack. Chapter 1 of the coursepack is provided here if you do not have the coursepack by your first day of class.</p>
 <ul>
 <li><a href="Coursepack-Preface.pdf"><em>STAT 216 Coursepack</em>: Preface</a></li>
-<li><a href="Coursepack-Ch1.pdf"><em>STAT 216 Coursepack</em>: Chapter 1</a></li>
+<li><a href="https://math.montana.edu/courses/s216/Week1_Coursepack.pdf"><em>STAT 216 Coursepack</em>: Chapter 1</a></li>
 </ul>
 </div>
 <div id="rstudio" class="section level3">
