Added chapter 2 of coursepack to syllabus and D2L

--- a/index.html
+++ b/index.html
@@ -338,6 +338,7 @@ Phone: (406) 994-6875</p>
 <ul>
 <li><a href="Coursepack-Preface.pdf"><em>STAT 216 Coursepack</em>: Preface</a></li>
 <li><a href="https://math.montana.edu/courses/s216/Week1_Coursepack.pdf"><em>STAT 216 Coursepack</em>: Chapter 1</a></li>
+<li><a href="Stat216Coursepack-Chapter2.pdf"><em>STAT 216 Coursepack</em>: Chapter 2</a></li>
 </ul>
 </div>
 <div id="rstudio" class="section level3">
