flip group and individual exam dates

--- a/index.html
+++ b/index.html
@@ -414,23 +414,10 @@ Phone: (406) 994-6875</p>
 </div>
 <div id="midterm-exams-30" class="section level3">
 <h3>Midterm exams (30%)</h3>
-<p>There will be two midterm exams (worth 15% of the course grade each). Midterm exams will be taken in class during your normal in-class time. Each exam has an individual (Wednesday) and group (Friday) component. A practice exam will be released in D2L two weeks prior to the exam, with solutions to the practice exam released in D2L one week prior to the exam. Further details, resources, and instructions for each exam will be posted the week prior to the exam in D2L.</p>
-<div id="individual-portion" class="section level4">
-<h4><em>Individual portion</em>:</h4>
-<p>Individual midterm exam 1 will be <strong>September 29th</strong>; Individual midterm exam 2 will be <strong>November 3rd</strong>.</p>
-<ul>
-<li>Individual portions of the midterms will be worth 80% of your midterm exam grade.</li>
-<li>Potential individual midterm exam questions will be released one week prior to the exam. All exam questions will be selected from this set.</li>
-<li>On the exam day, you will be given a randomly chosen subset of the previously released potential exam questions for your exam.</li>
-<li>Individual midterm exams are closed book, closed notes.</li>
-<li>A formula sheet will be provided to use during the exam (also released with the potential midterm exam questions).</li>
-<li>You will be allowed a calculator on the individual midterm exams.</li>
-<li>You will <strong>not</strong> be required to use Rstudio on the invdividual midterm exams.</li>
-</ul>
-</div>
+<p>There will be two midterm exams (worth 15% of the course grade each). Midterm exams will be taken in class during your normal in-class time. Each exam has an group (Wednesday) and individual (Friday) component. A practice exam will be released in D2L two weeks prior to the exam, with solutions to the practice exam released in D2L one week prior to the exam. Further details, resources, and instructions for each exam will be posted the week prior to the exam in D2L.</p>
 <div id="group-portion" class="section level4">
 <h4><em>Group portion</em>:</h4>
-<p>Group midterm exam 1 will be <strong>October 1st</strong>; Group midterm exam 2 will be <strong>November 5th</strong>.</p>
+<p>Group midterm exam 1 will be <strong>September 29th</strong>; Group midterm exam 2 will be <strong>November 3rd</strong>.</p>
 <ul>
 <li>Group portions of the midterms are worth 20% of your midterm exam grade.</li>
 <li>Group midterm exams are open book, open notes.</li>
@@ -438,10 +425,30 @@ Phone: (406) 994-6875</p>
 <li>You <strong>will</strong> be required to use Rstudio on the group midterm exams.</li>
 </ul>
 </div>
+<div id="individual-portion" class="section level4">
+<h4><em>Individual portion</em>:</h4>
+<p>Individual midterm exam 1 will be <strong>October 1st</strong>; Individual midterm exam 2 will be <strong>November 5th</strong>.</p>
+<ul>
+<li>Individual portions of the midterms will be worth 80% of your midterm exam grade.</li>
+<li>Potential individual midterm exam questions will be released one week prior to the exam. All exam questions will be selected from this set.</li>
+<li>On the exam day, you will be given a randomly chosen subset of the previously released potential exam questions for your exam.</li>
+<li>Individual midterm exams are closed book, closed notes.</li>
+<li>A formula sheet will be provided to use during the exam (also released with the potential midterm exam questions).</li>
+<li>You will be allowed a calculator on the individual midterm exams.</li>
+<li>You will <strong>not</strong> be required to use Rstudio on the individual midterm exams.</li>
+</ul>
+</div>
 </div>
 <div id="final-exam-20" class="section level3">
 <h3>Final exam (20%)</h3>
-<p>The group final exam will be taken in class during your normal in-class time. A practice exam will be released in D2L one week prior to the exam, with solutions to the practice exam released in D2L the Sunday prior to the exam. Further details, resources, and instructions for each exam will be posted the week prior to the exam in D2L.</p>
+<p>The group final exam will be taken in class during your normal in-class time. A practice exam will be released in D2L one week prior to the exam, with solutions to the practice exam released in D2L the Sunday prior to the exam. Further details, resources, and instructions for each exam will be posted the week prior to the exam in D2L. #### <em>Group portion</em>:</p>
+<p>Group final exam will be <strong>December 10th (during normal class time)</strong>.</p>
+<ul>
+<li>The group portion of the final exam will be worth 20% of your exam grade.</li>
+<li>The group final exams is open book, open notes.</li>
+<li>You will be allowed a calculator on the group final exam.</li>
+<li>You <strong>will</strong> be required to use Rstudio on the group final exam.</li>
+</ul>
 <div id="individual-portion-1" class="section level4">
 <h4><em>Individual portion</em>:</h4>
 <p>Individual final exam will be <strong>December 16th, 6 - 7:50pm</strong></p>
@@ -452,16 +459,6 @@ Phone: (406) 994-6875</p>
 <li>You will be allowed to create a one page note sheet for the exam. You will also be provided a one page formula sheet during the exam.</li>
 <li>You will be allowed a calculator on the individual final exam.</li>
 <li>You will <strong>not</strong> be required to use Rstudio on the individual final exams.</li>
-</ul>
-</div>
-<div id="group-portion-1" class="section level4">
-<h4><em>Group portion</em>:</h4>
-<p>Group final exam will be <strong>December 10th (during normal class time)</strong>.</p>
-<ul>
-<li>The group portion of the final exam will be worth 20% of your exam grade.</li>
-<li>The group final exams is open book, open notes.</li>
-<li>You will be allowed a calculator on the group final exam.</li>
-<li>You <strong>will</strong> be required to use Rstudio on the group final exam.</li>
 </ul>
 </div>
 </div>
